fixed dark mode, font size extended

--- a/custom.css
+++ b/custom.css
@@ -134,12 +134,17 @@ html.dark #header .dark\:text-primary-light {
   }
 }
 
+/* API parameter */
+
+/* .flex.font-mono.text-sm { */
+.flex.font-mono.text-sm .font-bold.text-primary.dark\:text-primary-light {
+  /* border: 3px solid lime !important; // debug */
+  font-size: 15px;
+}
+
 /* Links */
 
 .prose :where(a):not(:where([class~="not-prose"] *)) {
-  /* font-weight: inherit; */
-  /* border-bottom: unset; */
-  /* text-decoration: underline; */
   color: inherit;
   border-bottom-color: inherit;
 }
@@ -160,6 +165,9 @@ code.language-ruby span {
   color: inherit;
 }
 
+:is(.dark .prose strong) {
+  color: inherit;
+}
 
 #text {
   color: #fff;
@@ -668,7 +676,7 @@ html.dark #content-area button.dark:hover\:bg-white\/5:hover {
   background-color: #2d2e2f;
 }
 
-#content-area button p {
+#content-area .dark\:bg-codeblock button p {
   font-weight: 600;
 }
 
@@ -676,6 +684,16 @@ html.dark #content-area div[role="listitem"].border {
   background-color: rgb(20, 23, 23);
   /* border: 3px solid lime !important; */
   border: none;
+}
+
+/*  */
+/* Callouts */
+/*  */
+
+/* .my-4.px-5.py-4.overflow-hidden.rounded-xl.border.border-amber-500\/20.bg-amber-50\/50.dark\:border-amber-500\/30.dark\:bg-amber-500\/10 { */
+.my-4.px-5.py-4.overflow-hidden.rounded-xl.border .text-sm {
+  /* border: 3px solid lime !important; // debug if targeting fails */ 
+  font-size: 15px;
 }
 
 /*  */
@@ -692,19 +710,21 @@ html.dark #content-area div[role="listitem"].border {
 
 /* Code block */
 
-.dark\:bg-codeblock.rounded-xl {
+/* not-prose relative overflow-hidden bg-[#0F1117] dark:bg-codeblock rounded-xl dark:ring-1 dark:ring-gray-800/50 */
+
+.not-prose.dark\:bg-codeblock.rounded-xl {
   background: rgb(20, 23, 23);
 }
 
-.dark\:bg-codeblock.rounded-xl svg.fill-gray-700 {
+.not-prose.dark\:bg-codeblock.rounded-xl svg.fill-gray-700 {
   fill: rgb(var(--gray-400));
 }
 
-.dark\:bg-codeblock.rounded-xl>div:first-child {
+.not-prose.dark\:bg-codeblock.rounded-xl>div:first-child {
   background: #2d2e2f;
 }
 
-.dark\:bg-codeblock.rounded-xl>div:first-child>.flex.overflow-x-auto {
+.not-prose.dark\:bg-codeblock.rounded-xl>div:first-child>.flex.overflow-x-auto {
   overflow-y: hidden;
 }
 
@@ -727,12 +747,19 @@ html.dark #content-area div[role="listitem"].border {
 ::-webkit-scrollbar-thumb {
   /* background: rgb(20, 23, 23);  */
   /* background: #2d2e2f;  */
-  background: rgba(255,255,255,0.1);
   border-radius: 2px;
+  background: rgba(0,0,0,0.1);
   /* border: 2px solid #2d2e2f; */
 }
 
+html.dark ::-webkit-scrollbar-thumb {
+  background: rgba(255,255,255,0.1);
+}
+
 ::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.1);
+}
+html.dark::-webkit-scrollbar-track {
   background: rgba(255,255,255,0.1);
   /* box-shadow: inset 0 0 5px grey;  */
   /* border-radius: 10px; */
